  21 Oct 2014; Andrew John Hughes <gnu_andrew@member.fsf.org>
  -fedora-packager-0.5.9.2.ebuild, fedora-packager-0.5.9.6.ebuild:
  Remove old version and drop outdated virtual/python-argparse dependency.