@@ -2,23 +2,23 @@
 Hash: SHA256
 
 DIST fedora-packager-0.5.9.6.tar.bz2 75815 SHA256 0e40d4d9a693c330f0d52ed46d1be7b386160c944a9561d7d6860e9d57a6425e SHA512 6fbd8b2ac7ec2ce791674bda5048cdeb513ab1214a82b0ba3810436a070e839c0e883c833ca1de269966b4b6c85a03c7de207121d1134bb2738f003054285ae8 WHIRLPOOL 860bceb0dc46e990b43bbc7fcf9112f76a9d80e4d2445974d32523b5d10eb7d0b02c8f6f6f409b31169a8897fa08a7b3aff83340ae4c78c2ced81c993e5b5939
-EBUILD fedora-packager-0.5.9.6.ebuild 638 SHA256 757c5bea46f3a8e3557085d0bc2d15678441cfe8c3e624bd44f2433bf8ba2b2b SHA512 eb2b27555c7a62f8d5f3b79b52c07d69c958b91345c6a6c0257fc9c996a1af17f68dee09821bd95fca3df9793f7d995faab2845b7454c6a561d080ebd9d8a30e WHIRLPOOL 79819d43503545fe5b0ac32f0e9da98a27ac9a266f51bf1df0c5546c83fef1b4dc4fbffdb162504da4e42c8a0ac85cf597f2b5df164c10532eac4fffca64fb5b
-MISC ChangeLog 204 SHA256 06b466270f3f514725781d5200bb1537f1e2d721a918fe21b09904b8bdc00013 SHA512 b05287a04a3cd46b6a33a650f800e56be397542f4ce273d17e660fcb687b4525f41a7c5f8219d83c7b5d80678a7e1079772b89d0eeb92ecc0c23afa7716a2274 WHIRLPOOL 03c544ea4979939c1c7f463984d1d485ba8e92c1464fb6d675fb361ba57a28cb7be7b33cfbf484653b5cc1194912edf93e01202cc4623a289f12c34c06475617
+EBUILD fedora-packager-0.5.9.6.ebuild 667 SHA256 91612bfdcb936b205b11cffd3149159a0d00cf6e865a4c2777fc20398778f570 SHA512 88ad32eaab5af8ef26343588fc4967f808d99362f21ecd2889d34f19c1a0bc174243c07c568a5002e586ecd48bd44df778f1aa31dd51d9f7e423ddcb8c72671d WHIRLPOOL 474fc2a02469a009bec2b2cfbb578e63d78b8b171c3898f2288dbc0802302edd5c970509c3e000dc5e71d43fe356a3c37546118ebb59b3677ee035fa944d598f
+MISC ChangeLog 335 SHA256 d184ece253fcbda813d217168ccb282f591f3f61fa3399091f7bf82b375221af SHA512 b57396df3251bb287eab09532a2a67f7c5af2a1cf205f6ccc2ad3335269b0ae0d567ae5eca8fdbcb6270cb9e1db4e282b0559f5f0f7bec715a0ab806b6e493bd WHIRLPOOL c89751bf55e4ed1ca5bf0b0d5e8b47146b1ec798eb47b9f6d91e042eb9b0000dd85c6dd15e72c935c9fc09ed8474ccc092e66ed472da3b526fa58da1a104aadd
 MISC metadata.xml 210 SHA256 90082fe26a119a63ca8fbe227f66c33ba74167b6cf28e2cef02dea6c4f656c39 SHA512 4554adeece55ce9adfdadba04443a3ede6ff910b96a11b77bb1f07ddd6bdbc756b8e6e1873660f8f54e67f46db1065980794a6136c6de7883b24d0ee13ff51fe WHIRLPOOL f546bd1233d5a9934ba0480881ceba944cb8ff1869c12ed2421d4ccbb247ee38dc0c7c8b979f10533ad0fc603b5e4829d0ddf174a83d0bda8e8dd62c1c873eeb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJURriMAAoJEDuWpXgki9wH8nwP/j3C01LWf3z/DAqe5Gg88PbG
-Wu8gxyGZ5gcof3rp0zayxjAw4ANZTLlsczwoRqz9Jz7V8NyJfm+8QIfqdpeueoNm
-hzlHu2tU8vw5VSZ10a0pm8j8l0b7I8HtXDuInm0Q1WaU1j1bXMp4G0O3mbAppCQ9
-H/4ZEi0u3bY/m4j2j2SJIZh0jjXGwfBYRkePR9FfmvPoG/FmQpdvdjgK92QYKcSI
-XlHwmi5xzsOKItbnB07QA758KsAZPt0l9R3iwtm+DNiWz6ODTYsyncdMtDqvNJd3
-inFIZdk5t58RT8h3H7sOpt3uu8ZuawkCLXQMHwj7AdV9i8WUGRGMJdG5W0EmlvAQ
-oYfaUp/i4ckSmilL8QcgewWmqv1rbkD3nTP9AWni1Epe45shdK4ATVQUrAGwMy7N
-C9J0tV3Z54EHZky0Cy2IF1R05cRgaDTe9JZQdd7tAZcSrGLRpfqZT9ii7Q+FaS/C
-kkeqAKC+tgoUuyimQ8d2Beehxj2JszXR8nKAB/lsGQqEfEXSxUEiutY4MpC25Xxr
-ykiaZDPNgrRmkZEEjB2emcQFk0a+s8kgdheXCJ5ys6wMBiWmSFhcna9ZLCYdEYZl
-nY7zmCAPnJSsThJqAKYd+zsjBmFnShRlr0U7W24kVaC3Jis6m6uzh2A++Grj2Xmd
-jGP4m/5dY2z0k5gY6W5u
-=wkiV
+iQIcBAEBCAAGBQJURryEAAoJEDuWpXgki9wHo8sP/jP6G0FcidtUfczoTL28sNuv
+6unUV3jw56dFfw6mrcmDbMOFVAJnFoVIDAmqsDevZX++0fZVaQtr9x7e+YIRSuBM
+9WsaE7wfG+gJ8DnqcmXe5K5kK43XdNOIq8mvFdiIXLk0E3AvI8VmSWQvqPhvG9aR
+L8OisW0/+upwjdfYN//c+lHpm+qibBFO/l3Q3p2iufIr9K/JiJJK7Xq1i6Ti2w9a
+2IpOteViX2IY8WkTt6Y/aw9SxXbquyzZ7qflb0x4DeIrZcX09iqpMUR9LUTt/+rP
+mTVI1iUPJHIc6SyrhJHtcQFoJ+VBuc3bcXUw+3IjUmeoQOfpUP0C3ZbbSu7f69+d
+UtoQV0LZfnoB0/4r0tDbjRwoecy0TCypINP8hYmP148YLWHtBztsUEJu8frkZLWA
+Y6hOrngk6j/LHvMaA0OMNPoPnDA6ZPyot5e+bOzp0bl1k952Y2k4H6h5VCVbg1G8
+iJ8bU322b+lp8o3oHYkApkdlmd7I62PK3SU+NnQAgiQekbNvqOBifigxD8HB0zRO
+eThHoRu/atY4MuBK9qvYQPzp9iLgEe8tSdDXK/Ke4TDpBqEyEltzuwrD18OI6gNw
+Osk5YiJ5vlzY6ymptV0YLO2aM2kPjDj04o+npsuQMDw9oniqFckjgtm+s7Mch00T
+Gix2GunlaNPVWyDKKOUa
+=ftv2
 -----END PGP SIGNATURE-----
